--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "grunt-sync": "0.5.2",
     "include-all": "~0.1.6",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.4",
-    "sails-disk": "~0.10.9",
-    "sails-hook-deepblueprints": "0.0.3"
+    "sails-disk": "~0.10.9"
   },
   "scripts": {
     "debug": "node debug app.js",
